--- a/main.css
+++ b/main.css
@@ -1,33 +1,120 @@
-.nav li {
-    display: inline;
+body {
+    margin:0;     /* This is used to reset any browser-default margins */
+    height:100vh; /* This is needed to overcome a Chrome bug. */
+    width:100vw;  /* As above. */
 }
 
-.nav a {
-    color: #5a5a5a;
-    font-size: 24px;
+.outer-container {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 3px solid navy;
+    margin: 1px;
 }
 
-.jumbotron {
-    background-image: url(http://www.aimm.edu/images/Drums/slide1.jpg);
-    height: 500px;
+.top-left-outer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 50vw;
+    height: 50vh;
+    margin: 2px;
+    border: 5px solid red;
 }
 
-.jumbotron h1 {
-    color: #fff;
-    font-size: 48px;  
-    font-family: 'Shift', sans-serif;
-    font-weight: bold;
-    position: relative;
-    top: 0px;
-    left:0px;
+.top-right-outer {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 50vw;
+    height: 50vh;
+    margin: 2px;
+    border: 5px solid red;
 }
 
-.jumbotron p {
-  font-size: 20px;
-  color: #fff;
+.bottom-right-outer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 50vw;
+    height: 50vh;
+    margin: 2px;
+    border: 5px solid red;
 }
 
-.jumbotron-container {
-    position: relative;
-    top: 100px;
+.bottom-left-outer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 50vw;
+    height: 50vh;
+    margin: 2px;
+    border: 5px solid red;
 }
+
+.inner-container {
+    position: absolute;
+    left: 37.5vw;
+    top: 37.5vh;
+    z-index: 1;
+    height: 25vh;
+    width: 25vw;
+    border: 5px solid green;
+}
+
+.bottom-left-inner {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+    margin: 2px;
+    border: 5px solid yellow;
+}
+
+.bottom-right-inner {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 50%;
+    height: 50%;
+    margin: 2px;
+    border: 5px solid yellow;
+}
+
+.top-right-inner {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 50%;
+    margin: 2px;
+    border: 5px solid yellow;
+}
+
+.top-left-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+    margin: 2px;
+    border: 5px solid yellow;
+}
+
+.title-block {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    width: 10vw;
+    height: 10vh;
+    background-color: black;
+    margin: 2px;
+    border: 5px solid orange;
+    color: white;
+}
+
+
