--- a/main.css
+++ b/main.css
@@ -4,117 +4,89 @@ body {
     width:100vw;  /* As above. */
 }
 
-.outer-container {
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 3px solid navy;
-    margin: 1px;
-}
-
-.top-left-outer {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 50vw;
-    height: 50vh;
-    margin: 2px;
-    border: 5px solid red;
-}
-
-.top-right-outer {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 50vw;
-    height: 50vh;
-    margin: 2px;
-    border: 5px solid red;
-}
-
-.bottom-right-outer {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    width: 50vw;
-    height: 50vh;
-    margin: 2px;
-    border: 5px solid red;
-}
-
-.bottom-left-outer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 50vw;
-    height: 50vh;
-    margin: 2px;
-    border: 5px solid red;
-}
-
-.inner-container {
-    position: absolute;
-    left: 37.5vw;
-    top: 37.5vh;
-    z-index: 1;
-    height: 25vh;
-    width: 25vw;
-    border: 5px solid green;
-}
-
-.bottom-left-inner {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 50%;
-    height: 50%;
-    margin: 2px;
-    border: 5px solid yellow;
-}
-
-.bottom-right-inner {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 50%;
-    height: 50%;
-    margin: 2px;
-    border: 5px solid yellow;
-}
-
-.top-right-inner {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 50%;
-    margin: 2px;
-    border: 5px solid yellow;
-}
-
-.top-left-inner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 50%;
-    margin: 2px;
-    border: 5px solid yellow;
-}
-
 .title-block {
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    width: 10vw;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 20vw;
     height: 10vh;
+    margin-top: -5vh;
+    margin-left: -10vw;
+    border: 3px solid white;
+    border-radius: 10px;
     background-color: black;
-    margin: 2px;
-    border: 5px solid orange;
+    color: white;
+    text-align: center;
+}
+
+.outer-box {
+    position: relative;
+    box-sizing: border-box;
+    width: 50%;
+    height: 50%;
+    //border: 1px solid black;
+    float: left;
+}
+
+.inner-box {
+    width: 16vw;
+    height: 8vh;
+    background-color: #333333;
+    color: white;
+    border: 3px solid white;
+    border-radius: 10px;
+}
+
+#bottom-left span {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+#bottom-right span{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+#top-left {
+    text-align: left;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+#top-right {
+    text-align: right;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+#bottom-left {
+    text-align: left;
+    vertical-align: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#bottom-right {
+    text-align: right;
+    vertical-align: text-bottom;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#test-content {
+    display: none;
     color: white;
 }
+    
 
 
+h1 {
+    font-family: "Verdana";
+    font-size: 1em;
+}
