--- a/main.css
+++ b/main.css
@@ -31,6 +31,8 @@ body {
 }
 
 .inner-box {
+    display:flex;
+    flex-direction: column;
     width: 250px;
     height: 85px;
     background-color: #333333;
@@ -75,15 +77,15 @@ body {
 }
 
 #top-right-content {
+    order: -1;
     display: none;
     padding: 5px;
     overflow: auto;
 }
 
 #top-right-title {
-    height: 65px;
-    position: absolute;
-    right: 0;
+    height: auto;
+    width: auto;
     text-align: right;
     padding-right: 5px;
 }
