--- a/main.css
+++ b/main.css
@@ -42,35 +42,33 @@ body {
     border-radius: 5px;
 }
 
-#top-left {
+#top-left-container {
     position: absolute;
     bottom: 0;
     right: 0;
 }
 
 #top-left-content {
+    order: -1;
     display: none;
     padding: 5px;
-    overflow: auto;
+    overflow: hidden;
 }
 
-#top-left-title {
-    height: 65px;
-    position: absolute;
-    left: 0;
+#top-left {
+    height:8%;
+    width: auto;
     text-align: left;
-    padding-left: 5px;
+    padding: 5px;
 }
 
 .top-left-large {
     height: 85%;
     width: auto;
-    border: 1px solid gray;
-    border-radius: 5px;
-    margin: 10px;
+    margin: 5px;
 }
 
-#top-right {
+#top-right-container {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -83,11 +81,11 @@ body {
     overflow: auto;
 }
 
-#top-right-title {
-    height: auto;
+#top-right {
+    height: 8%;
     width: auto;
     text-align: right;
-    padding-right: 5px;
+    padding: 5px;
 }
 
 .top-right-large {
@@ -95,32 +93,27 @@ body {
     width: auto;
     border: 1px solid gray;
     border-radius: 5px;
-    margin: 10px;
+    margin: 5px;
 }
 
-#bottom-left {
+#bottom-left-container {
     position: absolute;
     top: 0;
     right: 0;
 }
 
 #bottom-left-content {
-    position: absolute;
-    right: 0;
-    bottom: 0;
     display: none;
     overflow: auto;
-    width: 98%;
     padding: 5px;
 }
 
-#bottom-left-title {
-    height: auto;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    text-align: left;
-    padding-left: 5px;
+#bottom-left {
+  order: -1;
+  height:8%;
+  width: auto;
+  text-align: left;
+  padding: 5px;
 }
 
 .bottom-left-large {
@@ -128,51 +121,163 @@ body {
     width: auto;
     border: 1px solid gray;
     border-radius: 5px;
-    margin: 10px;
+    margin: 5px;
 }
 
-#bottom-right {
+#bottom-right-container {
    position: absolute;
     top: 0;
     left: 0;
 }
 
 #bottom-right-content {
-    position: absolute;
-    left: 0;
-    bottom: 0;
     display: none;
-    overflow: auto;
-    width: 98%;
+    overflow:auto;
     padding: 5px;
 }
 
-#bottom-right-title {
-    height: auto;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    text-align: right;
-    padding-right: 5px;
+#bottom-right {
+  order: -1;
+  height: 8%;
+  width: auto;
+  text-align: right;
+  padding: 5px;
 }
 
 .bottom-right-large {
     height: 85%;
     width: auto;
-    border: 1px solid gray;
-    border-radius: 5px;
-    margin: 10px;
-}
-
-.top-titles {
-    bottom: 0;
-}
-
-.bottom-titles {
-    top: 0;
+    margin: 5px;
 }
 
 h1 {
     font-family: "Verdana";
     font-size: 1em;
+    margin: 0; /*Fixes annoying chrome thing where it puts a margin above and bellow tags*/
+    padding: 0;/*Same as above*/
+}
+
+.tabs-menu {
+  width: 100%;
+  height: 30px;
+  float: left;
+  clear: both;
+  padding-left: 0; /*resolves chrome issue with ul start padding of 40px*/
+  margin: 0;
+}
+
+.tabs-menu li {
+  width:24.5%;
+  height: 30px;
+  line-height: 30px;
+  float: left;
+  margin-right: 10px
+  background-color: #ccc;
+  border-top: 1px solid #d4d4d1;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-right: 1px solid #d4d4d1;
+  border-left: 1px solid #d4d4d1;
+  list-style: none;
+  text-align: center;
+}
+
+.tabs-menu li.active-tab {
+    position: relative;
+    background-color: black;
+    z-index: 5;
+}
+
+.tabs-menu li a {
+    padding: 10px;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+}
+
+.tab {
+    border: 1px solid #d4d4d1;
+    background-color: black;
+    float: left;
+    margin-bottom: 20px;
+    width: 99%;
+    height: 92%;
+}
+
+.tab-content {
+    width: 90%;
+    height: 99%;
+    overflow: auto;
+    display: none;
+    padding: 5px;
+}
+
+.accordion {
+  width: 100%;
+  height: 98%;
+}
+
+.accordion-title {
+  background-color: black;
+  width: 99%;
+  height: 25px;
+  padding: 2px;
+}
+
+.accordion-content {
+  width: 98%;
+  display: none;
+}
+
+.myMenu {
+	margin:0;
+	padding:0;
+  margin-top: 20px;
+  padding-left: 2px;
+}
+
+.myMenu li {
+	list-style:none;
+	float:left;
+	font:12px Arial, Helvetica, sans-serif #111;
+
+}
+
+.myMenu li a:link, .myMenu li a:visited {
+	display:block;
+	text-decoration:none;
+	background-color: black;
+	padding: 0.5em 2em;
+	margin:0;
+	color: white;
+  width: auto;
+
+}
+
+.myMenu li a:hover {
+	background-color:white;
+  color: black;
+}
+
+/*style the sub menu*/
+.myMenu li ul {
+	position:absolute;
+	visibility:hidden;
+	margin:0;
+	padding:0;
+}
+
+.myMenu li ul li {
+	display:inline;
+	float:none;
+}
+
+.myMenu li ul li a:link, .myMenu li ul li a:visited {
+	background-color:black;
+	width:auto;
+}
+
+.myMenu li ul li a:hover {
+	background-color:white;
+  color: black;
 }
